--- a/build.xml
+++ b/build.xml
@@ -1,10 +1,17 @@
-<project name="Function Drawer" default="build" basedir=".">
+<project name="Function Drawer" default="run" basedir=".">
 
 	<property name="src.dir" location="src" />
-	<property name="build.dir" location="build" />
 	<property name="lib.dir" location="lib" />
+	<property name="test.src.dir" location="test" />
 	<property name="etc.dir" location="etc" />
-	<property name="test.dir" location="test" />
+	
+	<property name="build.dir" location="build" />
+	<property name="build.class.dir" location="${build.dir}/classes" />
+	<property name="build.test.dir" location="${build.dir}/test" />
+	<property name="build.deploy.dir" location="${build.dir}/deploy" />
+	<property name="build.fprod" location="${build.dir}/deploy/fdrawer.jar" />
+	
+	
 	<property name="grammar.file" value="${etc.dir}/Expr.g" />
 	<property name="eval.file" value="${etc.dir}/Eval.g" />
 	<property name="reports.tests" value="testresult" />
@@ -22,9 +29,9 @@
 			<arg value="${eval.file}" />
 		</java>
 
-		<move file="${basedir}/ExprLexer.java" todir="${src.dir}/parser" />
-		<move file="${basedir}/ExprParser.java" todir="${src.dir}/parser" />
-		<move file="${basedir}/Eval.java" todir="${src.dir}/parser" />
+		<move file="${etc.dir}/ExprLexer.java" todir="${src.dir}/parser" />
+		<move file="${etc.dir}/ExprParser.java" todir="${src.dir}/parser" />
+		<move file="${etc.dir}/Eval.java" todir="${src.dir}/parser" />
 		<move file="${basedir}/Expr.tokens" todir="${src.dir}/parser" />
 		<move file="${basedir}/Eval.tokens" todir="${src.dir}/parser" />
 
@@ -44,8 +51,9 @@
 
 	<target name="init">
 		<mkdir dir="${build.dir}" />
-		<mkdir dir="${build.dir}/classes" />
-		<mkdir dir="${build.dir}/test" />
+		<mkdir dir="${build.class.dir}" />
+		<mkdir dir="${build.test.dir}" />
+		<mkdir dir="${build.deploy.dir}" />
 	</target>
 
 	<path id="compile.classpath">
@@ -53,19 +61,19 @@
 	</path>
 
 	<target name="compile" depends="parser, init" description="Compiles all .java project files">
-		<javac srcdir="${src.dir}" destdir="${build.dir}/classes" classpathref="compile.classpath" />
+		<javac srcdir="${src.dir}" destdir="${build.class.dir}" classpathref="compile.classpath" />
 	</target>
 
 	<path id="test.classpath">
 		<path refid="compile.classpath" />
 		<pathelement location="${lib.dir}/junit-4.7.jar" />
-		<pathelement location="${build.dir}/classes" />
-		<pathelement location="${build.dir}/test" />
+		<pathelement location="${build.class.dir}" />
+		<pathelement location="${build.test.dir}" />
 	</path>
 
 
 	<target name="compile.tests" depends="compile" description="Compiles all test files">
-		<javac srcdir="${test.dir}" destdir="${build.dir}/test" classpathref="test.classpath" />
+		<javac srcdir="${test.src.dir}" destdir="${build.test.dir}" classpathref="test.classpath" />
 	</target>
 
 	<target name="test" depends="compile.tests" description="Run all unit tests">
@@ -74,12 +82,27 @@
 			<formatter type="brief" usefile="false" />
 			<formatter type="xml" />
 			<batchtest todir="${reports.tests}">
-				<fileset dir="${build.dir}/test" includes="**/*Test.class" />
+				<fileset dir="${build.test.dir}" includes="**/*Test.class" />
 			</batchtest>
 		</junit>
 	</target>
 
-	<target name="build" depends="test" description="Builds application" />
+	<target name="build" depends="test" description="Builds application. Executable jar: fdrawer.jar">
+		<unzip src="${lib.dir}/antlr-3.1.3.jar" dest="${build.class.dir}" />
+		<jar destfile="${build.fprod}" basedir="${build.class.dir}" includes="**/*.class">
+			<manifest>
+				<attribute name="Main-Class" value="ui.Settings" />
+			</manifest>
+		</jar>
+	</target>
+
+
+	<target name="run" description="run it">
+		<available file="${build.fprod}" property="jar.exists" />
+		<fail unless="jar.exists" message="fdrawer.jar doesn't exist!" />
+		<java jar="${build.dir}/deploy/fdrawer.jar" fork="true" failonerror="true" />
+	</target>
+
 
 	<target name="rebuild" depends="clean, build" description="Rebuilds application" />
 
