--- a/build.xml
+++ b/build.xml
@@ -93,7 +93,7 @@
 		<unzip src="${lib.dir}/antlr-3.1.3.jar" dest="${build.class.dir}" />
 		<jar destfile="${build.fprod}" basedir="${build.class.dir}" includes="**/*.class">
 			<manifest>
-				<attribute name="Main-Class" value="ui.DrawingForm" />
+				<attribute name="Main-Class" value="ui.DrawingFormX" />
 			</manifest>
 		</jar>
 	</target>
