made the CalculatingWorker part of the model, completly decoupled from the swing implementation, added some tests for it, added a dummy drawing controller in the ui package ( not yet used )

--- a/build.xml
+++ b/build.xml
@@ -118,7 +118,7 @@
 		<unzip src="${lib.dir}/log4j-1.2.15.jar" dest="${build.class.dir}" />
 		<jar destfile="${build.fprod}" basedir="${build.class.dir}" includes="**/*.class">
 			<manifest>
-				<attribute name="Main-Class" value="ui.DrawingForm" />
+				<attribute name="Main-Class" value="ui.SwingDrawer" />
 			</manifest>
 		</jar>
 	</target>
