--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project name="Function Drawer" default="build" basedir=".">
+<project name="Function Drawer" default="run" basedir=".">
 
 	<property name="src.dir" location="src" />
 	<property name="lib.dir" location="lib" />
@@ -88,6 +88,10 @@
 
 	<target name="compile" depends="parser, init" description="Compiles all .java project files">
 		<javac srcdir="${src.dir}" destdir="${build.class.dir}" classpathref="compile.classpath" />
+		<copy todir="${build.class.dir}">
+			<fileset dir="${src.dir}" excludes="**/*.java" />
+		</copy>
+
 	</target>
 
 	<path id="test.classpath">
@@ -103,7 +107,7 @@
 	</target>
 
 	<target name="test" depends="compile.tests" description="Run all unit tests">
-		<junit printsummary="true" haltonfailure="true">
+		<junit printsummary="true" haltonfailure="true" fork="no">
 			<classpath refid="test.classpath" />
 			<formatter type="brief" usefile="false" />
 			<formatter type="xml" />
@@ -113,10 +117,10 @@
 		</junit>
 	</target>
 
-	<target name="build" depends="test" description="Builds application. Executable jar: fdrawer.jar">
+	<target name="build" depends="compile" description="Builds application. Executable jar: fdrawer.jar">
 		<unzip src="${lib.dir}/antlr-3.1.3.jar" dest="${build.class.dir}" />
 		<unzip src="${lib.dir}/log4j-1.2.15.jar" dest="${build.class.dir}" />
-		<jar destfile="${build.fprod}" basedir="${build.class.dir}" includes="**/*.class">
+		<jar destfile="${build.fprod}" basedir="${build.class.dir}">
 			<manifest>
 				<attribute name="Main-Class" value="ui.SwingDrawer" />
 			</manifest>
@@ -124,7 +128,7 @@
 	</target>
 
 
-	<target name="run" description="run it">
+	<target name="run" depends="build" description="run it">
 		<available file="${build.fprod}" property="jar.exists" />
 		<fail unless="jar.exists" message="fdrawer.jar doesn't exist!" />
 		<java jar="${build.dir}/deploy/fdrawer.jar" fork="true" failonerror="true" />
