--- a/src/logging.properties
+++ b/src/logging.properties
@@ -1,8 +1,9 @@
-log4j.rootLogger=trace, stdout, R
+log4j.rootLogger=debug, stdout, R
 
-log4j.logger.ui.SwingDrawer=debug
-log4j.logger.ui.FDrawComponent=debug
-log4j.logger.model.CalculatingWorker=debug
+
+# log4j.logger.ui.SwingDrawer=debug
+# log4j.logger.ui.FDrawComponent=debug
+# log4j.logger.model.CalculatingWorker=debug
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
