--- a/build.xml
+++ b/build.xml
@@ -117,7 +117,7 @@
 		</junit>
 	</target>
 
-	<target name="build" depends="compile" description="Builds application. Executable jar: fdrawer.jar">
+	<target name="build" depends="test" description="Builds application. Executable jar: fdrawer.jar">
 		<unzip src="${lib.dir}/antlr-3.1.3.jar" dest="${build.class.dir}" />
 		<unzip src="${lib.dir}/log4j-1.2.15.jar" dest="${build.class.dir}" />
 		<jar destfile="${build.fprod}" basedir="${build.class.dir}">
